bugfix: fixed squared avatar borders on safari

--- a/src/components/common/ui/cards/poll-teacher-card/PollTeacherCard.module.scss
+++ b/src/components/common/ui/cards/poll-teacher-card/PollTeacherCard.module.scss
@@ -26,6 +26,7 @@
   margin-bottom: 12px;
   outline: 2px solid $background-dark-35;
   border-radius: 100%;
+  -webkit-border-radius: 100%;
   width: 64px;
   height: 64px;
 }
