--- a/src/components/common/ui/cards/subject-teacher-card/SubjectTeacherCard.module.scss
+++ b/src/components/common/ui/cards/subject-teacher-card/SubjectTeacherCard.module.scss
@@ -52,6 +52,7 @@
   width: 64px;
   outline: 2px solid $background-dark-35;
   border-radius: 100%;
+  -webkit-border-radius: 100%;
   margin-bottom: 12px;
 }
 
