--- a/src/components/pages/account-page/components/general-tab/GeneralTab.module.scss
+++ b/src/components/pages/account-page/components/general-tab/GeneralTab.module.scss
@@ -41,6 +41,7 @@
     width: 160px;
     height: 160px;
     border-radius: 100%;
+    -webkit-border-radius: 100%;
   }
 }
 
