--- a/src/components/pages/account-page/components/group-tab/components/table/mobile-student-table/MobileStudentTable.module.scss
+++ b/src/components/pages/account-page/components/group-tab/components/table/mobile-student-table/MobileStudentTable.module.scss
@@ -20,6 +20,7 @@
     width: 36px;
     height: 36px;
     border-radius: 100%;
+    -webkit-border-radius: 100%;
   }
 }
 
