--- a/src/components/pages/account-page/components/group-tab/components/table/student-table/StudentTable.module.scss
+++ b/src/components/pages/account-page/components/group-tab/components/table/student-table/StudentTable.module.scss
@@ -51,6 +51,7 @@
     width: 48px;
     height: 48px;
     border-radius: 100%;
+    -webkit-border-radius: 100%;
   }
 }
 
